# py-usb-helper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: sample.toml
src/usb_helper/: __init__.py  _cbw.py  _darwin_scsi.py  bulk_device.py  cli.py  config.py  device.py  monitor.py  scsi_device.py  types.py
tests/: conftest.py  test_bulk_device.py  test_cbw.py  test_cli.py  test_config.py  test_darwin_scsi.py  test_monitor.py  test_scsi_device.py  test_types.py
